fix: update hero item display and layout for better alignment

--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -20,11 +20,13 @@
 }
 
 .hero__item--current {
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 .hero__image-wrapper {
-  margin-bottom: 10px;
+  order: 2;
+  margin-top: 10px;
 }
 
 .hero__image {
@@ -33,6 +35,7 @@
 }
 
 .hero__content {
+  order: 1;
   text-align: center;
 }
 
